gitignore from private version

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-*.o
-exec/
-src_/
-obj/
-output/
-restart/
-*.ipynb
-Makefile
-__pycache__
-vis/
-.sync-config.cson
-.DS_Store
-submit*
-backup_*
-backups/
+/*
+/*/
+!/src/
+!/inputs/
+!/tristanVis/
+!/unit/
+!/user/
+!.gitignore
+!configure.py
+!fulltest.py
+!Makefile.in
+!README.md
+!LICENSE
+!CITATION
