--- a/Makefile.in
+++ b/Makefile.in
@@ -34,7 +34,7 @@ all : depend $(EXECUTABLE)
 include Makefile.depend
 
 depend Makefile.depend:
-	@-./makedepf90 $(SRC_FILES) -B $(BUILD_DIR) > Makefile.depend
+	@-./extern/makedepf90 $(SRC_FILES) -B $(BUILD_DIR) > Makefile.depend
 
 $(EXECUTABLE): $(OBJ_FILES)
 	@echo Linking $(EXECUTABLE)
