--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,6 @@ option(emit "Enable photon emission" OFF)
 set(precision "single" CACHE STRING "Precision of the code (single or double)")
 set(nghosts "2" CACHE STRING "Number of ghost cells (default 2)")
 set(radiation "OFF" CACHE STRING "Radiation drag (or OFF)")
-set(gca "OFF" CACHE STRING "Number of GCA iterations (or OFF)")
 
 # -- additional configs for each option --
 if (${mpi08} STREQUAL "ON")
@@ -239,7 +238,7 @@ message(NOTICE "  Dim: ${dim}D")
 message(NOTICE "  ghost zones: ${nghosts}")
 message(NOTICE "  Load balancing: SLB=${slb} ALB=${alb}")
 message(NOTICE "  Particle downsampling: ${dwn}")
-message(NOTICE "  Particle pusher: Vay=${vay} GCA=${gca}")
+message(NOTICE "  Particle pusher: Vay=${vay}")
 message(NOTICE "  Particle payloads: ${payload}")
 message(NOTICE "")
 message(NOTICE "PHYSICS:")
